--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "scikit-learn>=1.3.0",
     "scipy>=1.11.0",
     "diffusers>=0.25.0",
+    "pandas>=2.0.0",
+    "tabulate>=0.9.0",
 ]
 
 [project.optional-dependencies]
